7017324: Kerning crash in JDK 7 since ICU layout update Reviewed-by: igor, prr, omajid