src/share/native/sun/font/layout/KernTable.cpp
@@ -217,7 +217,7 @@ void KernTable::process(LEGlyphStorage& storage, LEErrorCode &success)
       // all the elements ahead of time and store them in the font
 
       const PairInfo* p = pairsSwapped;
-      const PairInfo* tp = (const PairInfo*)(p + rangeShift);
+      const PairInfo* tp = (const PairInfo*)(p + (rangeShift/KERN_PAIRINFO_SIZE)); /* rangeshift is in original table bytes */
       if (key > tp->key) {
         p = tp;
       }
@@ -229,7 +229,7 @@ void KernTable::process(LEGlyphStorage& storage, LEErrorCode &success)
       le_uint32 probe = searchRange;
       while (probe > 1) {
         probe >>= 1;
-        tp = (const PairInfo*)(p + probe);
+        tp = (const PairInfo*)(p + (probe/KERN_PAIRINFO_SIZE));
         le_uint32 tkey = tp->key;
 #if DEBUG
         fprintf(stdout, "   %.3d (%0.8x)\n", (tp - pairsSwapped), tkey);
